# ModelCardAudit-Env

./: .gitignore  Blog.md  Dockerfile  Dockerfile.train  README.md  SRS.md  conftest.py  inference.py  openenv.yaml  plot_training.py  pyproject.toml  pyrightconfig.json  requirements.txt  train_rl.ipynb  train_rl.py  trajectory_collector.py  true_rl_implementation_plan.md  true_rl_walkthrough.md
data/checklists/: basic_completeness.json  regulatory_compliance.json  technical_consistency.json
data/ground_truth/: easy_annotations.json  hard_annotations.json  medium_annotations.json
data/model_cards/easy/: easy_card_1.json  easy_card_2.json  easy_card_3.json
data/model_cards/hard/: hard_card_1.json  hard_card_2.json  hard_card_3.json
data/model_cards/medium/: medium_card_1.json  medium_card_2.json  medium_card_3.json
env/: __init__.py  environment.py  graders.py  gym_wrapper.py  hf_model_card.py  models.py  reward.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/css/: components.css  layout.css  reset.css  variables.css  views.css
frontend/js/: api.js  main.js  router.js  state.js
frontend/js/components/: checklist.js  finding-card.js  flag-form.js  modal.js  progress-bar.js  score-display.js  section-viewer.js  sidebar.js  task-card.js  topbar.js
frontend/js/utils/: audit-logic.js  dom.js  format.js  icons.js  task-meta.js
frontend/js/views/: audit.js  card-viewer.js  overview.js  report.js
server/: app.py
tests/: test_environment.py  test_graders.py  test_hf_model_card.py  test_inference.py  test_models.py
